--- a/howler/wally_search/templates/wally/resultsirc.html
+++ b/howler/wally_search/templates/wally/resultsirc.html
@@ -1,5 +1,6 @@
 {% extends "wally/base_results.html" %}
 {% load i18n %}
+{% load results %}
 
 {% block col_header %}
     <th></th>
@@ -31,7 +32,7 @@
     </td>
     <td class="text-nowrap">
         {% if hit.meta.highlight.channel.0 %}
-            {{ hit.meta.highlight.channel.0|safe }}
+            {{ hit.meta.highlight.channel.0|strip_except_tags:"em" }}
         {% else %}
             {{ hit.channel }}
         {% endif %}
@@ -46,7 +47,7 @@
     </td>
     <td class="text-nowrap">
         {% if hit.meta.highlight.username.0 %}
-            {{ hit.meta.highlight.username.0|safe }}
+            {{ hit.meta.highlight.username.0|strip_except_tags:"em" }}
         {% else %}
             {{ hit.username }}
         {% endif %}
@@ -55,7 +56,7 @@
     <td>
         <span>
             {% if hit.meta.highlight.msg.0 %}
-                {{ hit.meta.highlight.msg.0|safe }}
+                {{ hit.meta.highlight.msg.0|strip_except_tags:"em" }}
             {% else %}
                 {{ hit.msg }}
             {% endif %}
